--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,4 +10,9 @@
   body {
     @apply font-sans antialiased bg-background text-foreground;
   }
+
+  .dark input:not([type="submit"]):not([type="button"]), 
+  .dark select:not([multiple]) {
+    @apply bg-gray-700 border-gray-600;
+  }
 }
